chore: ruff everything

--- a/notebooks/annotations.ipynb
+++ b/notebooks/annotations.ipynb
@@ -43,8 +43,10 @@
     "c4 = jscatter.Rect(x_start=-1.5, x_end=-0.5, y_start=-1.25, y_end=-0.75)\n",
     "\n",
     "scatter = jscatter.Scatter(\n",
-    "    x=np.concatenate((x1, x2, x3, x4)), x_scale=(-2, 2),\n",
-    "    y=np.concatenate((y1, y2, y3, y4)), y_scale=(-2, 2),\n",
+    "    x=np.concatenate((x1, x2, x3, x4)),\n",
+    "    x_scale=(-2, 2),\n",
+    "    y=np.concatenate((y1, y2, y3, y4)),\n",
+    "    y_scale=(-2, 2),\n",
     "    annotations=[x0, y0, c1, c2, c3, c4],\n",
     "    width=400,\n",
     "    height=400,\n",
