--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -27,7 +27,7 @@
     "    data=geonames,\n",
     "    x='Longitude',\n",
     "    y='Latitude',\n",
-    "    color_by=\"Continent\",\n",
+    "    color_by='Continent',\n",
     "    height=360,\n",
     ")\n",
     "\n",
@@ -137,7 +137,7 @@
     "    color_by='class',\n",
     "    background_color='black',\n",
     "    axes=False,\n",
-    "    height=480\n",
+    "    height=480,\n",
     ")"
    ]
   },
@@ -157,6 +157,7 @@
     "import anywidget\n",
     "import traitlets\n",
     "import traittypes\n",
+    "\n",
     "\n",
     "class ImagesWidget(anywidget.AnyWidget):\n",
     "    _esm = \"\"\"\n",
@@ -218,6 +219,7 @@
     "\n",
     "    images = traittypes.Array(default_value=[]).tag(sync=True)\n",
     "\n",
+    "\n",
     "images = ImagesWidget()"
    ]
   },
@@ -236,8 +238,10 @@
    "source": [
     "import ipywidgets\n",
     "\n",
+    "\n",
     "def selection_change_handler(change):\n",
     "    images.images = change['new']\n",
+    "\n",
     "\n",
     "scatter.widget.observe(selection_change_handler, names=['selection'])\n",
     "\n",
@@ -257,6 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fmt: off\n",
     "scatter.selection([\n",
     "    1254,  52549, 47543, 11095, 34364, 36959, 11363,  9277, 23068,\n",
     "    8921,  54801, 46398, 51721, 20057, 50162,   572, 59831, 43542,\n",
@@ -267,8 +272,8 @@
     "    15293,  9619,   872, 20886, 57006, 42770, 41476, 54424, 34547,\n",
     "    6570,   5556, 36400, 14179, 16730, 15361,  5192, 58429, 59357,\n",
     "    2789,  30767, 46375, 45233, 32280, 58065, 20809, 17061, 27960,\n",
-    "    42692\n",
-    "])"
+    "])\n",
+    "# fmt: on"
    ]
   },
   {
@@ -302,7 +307,7 @@
     "cae = jscatter.Scatter(x='caeX', y='caeY', **config)\n",
     "\n",
     "jscatter.compose(\n",
-    "    [(pca, \"PCA\"), (tsne, \"t-SNE\"), (umap, \"UMAP\"), (cae, \"CAE\")],\n",
+    "    [(pca, 'PCA'), (tsne, 't-SNE'), (umap, 'UMAP'), (cae, 'CAE')],\n",
     "    sync_selection=True,\n",
     "    sync_hover=True,\n",
     "    rows=2,\n",
