--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -193,7 +193,9 @@
     }
    ],
    "source": [
-    "scatter.color(by='group').size(by='value').height(320).selection(df.query('x < 0.5').index).axes(grid=True, labels=['X', 'Y']).legend(True)"
+    "scatter.color(by='group').size(by='value').height(320).selection(\n",
+    "    df.query('x < 0.5').index\n",
+    ").axes(grid=True, labels=['X', 'Y']).legend(True)"
    ]
   },
   {
@@ -224,16 +226,18 @@
     }
    ],
    "source": [
-    "scatter.color(map=dict(\n",
-    "  C='red',\n",
-    "  B='blue',\n",
-    "  A='yellow',\n",
-    "  D='pink',\n",
-    "  E='green',\n",
-    "  F='brown',\n",
-    "  G='gray',\n",
-    "  H='#56B4E9'\n",
-    "))"
+    "scatter.color(\n",
+    "    map=dict(\n",
+    "        C='red',\n",
+    "        B='blue',\n",
+    "        A='yellow',\n",
+    "        D='pink',\n",
+    "        E='green',\n",
+    "        F='brown',\n",
+    "        G='gray',\n",
+    "        H='#56B4E9',\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -275,12 +279,12 @@
     "    color_by='value',\n",
     "    color_order='reverse',\n",
     "    size_by='value',\n",
-    "    size_map=[10,11,12,13,14,15],\n",
+    "    size_map=[10, 11, 12, 13, 14, 15],\n",
     "    opacity_by='value',\n",
     "    connect_by='group',\n",
     "    connection_color_by='value',\n",
     "    connection_color_order='reverse',\n",
-    "    height=600\n",
+    "    height=600,\n",
     ")"
    ]
   },
@@ -303,7 +307,7 @@
    "source": [
     "def roesslerAttractor(num):\n",
     "    from math import inf\n",
-    "    \n",
+    "\n",
     "    points = []\n",
     "\n",
     "    xn = 2.644838333129883\n",
@@ -342,10 +346,9 @@
     "        minY = min(yn1, minY)\n",
     "        maxY = max(yn1, maxY)\n",
     "\n",
-    "        xn = xn1;\n",
-    "        yn = yn1;\n",
-    "        zn = zn1;\n",
-    "\n",
+    "        xn = xn1\n",
+    "        yn = yn1\n",
+    "        zn = zn1\n",
     "\n",
     "    dX = maxX - minX\n",
     "    dY = maxY - minY\n",
@@ -384,7 +387,7 @@
    ],
    "source": [
     "points = np.asarray(roesslerAttractor(1000000))\n",
-    "jscatter.plot(points[:,0], points[:,1], height=640)"
+    "jscatter.plot(points[:, 0], points[:, 1], height=640)"
    ]
   },
   {
