--- a/notebooks/get-started.ipynb
+++ b/notebooks/get-started.ipynb
@@ -116,13 +116,13 @@
    ],
    "source": [
     "jscatter.plot(\n",
-    "  data=df,\n",
-    "  x='mass',\n",
-    "  y='speed',\n",
-    "  size=8, # static encoding\n",
-    "  color_by='group', # data-driven encoding\n",
-    "  opacity_by='density', # view-driven encoding\n",
-    "  legend=True,\n",
+    "    data=df,\n",
+    "    x='mass',\n",
+    "    y='speed',\n",
+    "    size=8,  # static encoding\n",
+    "    color_by='group',  # data-driven encoding\n",
+    "    opacity_by='density',  # view-driven encoding\n",
+    "    legend=True,\n",
     ")"
    ]
   },
@@ -287,10 +287,7 @@
     }
    ],
    "source": [
-    "jscatter.link([\n",
-    "    jscatter.Scatter(x=x, y=y),\n",
-    "    jscatter.Scatter(x=x, y=y)\n",
-    "])"
+    "jscatter.link([jscatter.Scatter(x=x, y=y), jscatter.Scatter(x=x, y=y)])"
    ]
   },
   {
