--- a/notebooks/linking.ipynb
+++ b/notebooks/linking.ipynb
@@ -109,7 +109,9 @@
     "import pyarrow as pa\n",
     "import requests\n",
     "\n",
-    "r = requests.get('https://storage.googleapis.com/flekschas/regl-scatterplot/fashion-mnist-embeddings.arrow')\n",
+    "r = requests.get(\n",
+    "    'https://storage.googleapis.com/flekschas/regl-scatterplot/fashion-mnist-embeddings.arrow'\n",
+    ")\n",
     "\n",
     "with pa.ipc.open_file(io.BytesIO(r.content)) as reader:\n",
     "    embeddings = reader.read_pandas()\n",
@@ -150,7 +152,18 @@
     "config = dict(\n",
     "    background_color='#111111',\n",
     "    color_by='class',\n",
-    "    color_map=['#FFFF00', '#1CE6FF', '#FF34FF', '#FF4A46', '#008941', '#006FA6', '#A30059', '#FFDBE5', '#7A4900', '#0000A6']\n",
+    "    color_map=[\n",
+    "        '#FFFF00',\n",
+    "        '#1CE6FF',\n",
+    "        '#FF34FF',\n",
+    "        '#FF4A46',\n",
+    "        '#008941',\n",
+    "        '#006FA6',\n",
+    "        '#A30059',\n",
+    "        '#FFDBE5',\n",
+    "        '#7A4900',\n",
+    "        '#0000A6',\n",
+    "    ],\n",
     ")\n",
     "\n",
     "scatter_pca = jscatter.Scatter(data=embeddings, x='pcaX', y='pcaY', **config)\n",
@@ -158,7 +171,9 @@
     "scatter_umap = jscatter.Scatter(data=embeddings, x='umapX', y='umapY', **config)\n",
     "scatter_cae = jscatter.Scatter(data=embeddings, x='caeX', y='caeY', **config)\n",
     "\n",
-    "jscatter.link([scatter_pca, scatter_tsne, scatter_umap, scatter_cae], rows=2, row_height=240)"
+    "jscatter.link(\n",
+    "    [scatter_pca, scatter_tsne, scatter_umap, scatter_cae], rows=2, row_height=240\n",
+    ")"
    ]
   },
   {
@@ -197,32 +212,41 @@
     "X3, Y3 = np.mgrid[0:8:1, 0:8:1]\n",
     "\n",
     "df1 = pd.DataFrame(\n",
-    "    np.concatenate((\n",
-    "        np.expand_dims(X1.flatten(), axis=1),\n",
-    "        np.expand_dims(Y1.flatten(), axis=1),\n",
-    "        np.expand_dims(np.repeat(np.arange(4), 1), axis=1)\n",
-    "    ), axis=1),\n",
+    "    np.concatenate(\n",
+    "        (\n",
+    "            np.expand_dims(X1.flatten(), axis=1),\n",
+    "            np.expand_dims(Y1.flatten(), axis=1),\n",
+    "            np.expand_dims(np.repeat(np.arange(4), 1), axis=1),\n",
+    "        ),\n",
+    "        axis=1,\n",
+    "    ),\n",
     "    columns=['x', 'y', 'group'],\n",
     ")\n",
     "df1.group = df1.group.astype('category')\n",
     "\n",
     "df2 = pd.DataFrame(\n",
-    "    np.concatenate((\n",
-    "        np.expand_dims(X2.flatten(), axis=1),\n",
-    "        np.expand_dims(Y2.flatten(), axis=1),\n",
-    "        np.expand_dims(np.repeat(np.arange(4), 4), axis=1)\n",
-    "    ), axis=1),\n",
-    "    columns=['x', 'y', 'group']\n",
+    "    np.concatenate(\n",
+    "        (\n",
+    "            np.expand_dims(X2.flatten(), axis=1),\n",
+    "            np.expand_dims(Y2.flatten(), axis=1),\n",
+    "            np.expand_dims(np.repeat(np.arange(4), 4), axis=1),\n",
+    "        ),\n",
+    "        axis=1,\n",
+    "    ),\n",
+    "    columns=['x', 'y', 'group'],\n",
     ")\n",
     "df2.group = df2.group.astype('category')\n",
     "\n",
     "df3 = pd.DataFrame(\n",
-    "    np.concatenate((\n",
-    "        np.expand_dims(X3.flatten(), axis=1),\n",
-    "        np.expand_dims(Y3.flatten(), axis=1),\n",
-    "        np.expand_dims(np.repeat(np.arange(4), 16), axis=1)\n",
-    "    ), axis=1),\n",
-    "    columns=['x', 'y', 'group']\n",
+    "    np.concatenate(\n",
+    "        (\n",
+    "            np.expand_dims(X3.flatten(), axis=1),\n",
+    "            np.expand_dims(Y3.flatten(), axis=1),\n",
+    "            np.expand_dims(np.repeat(np.arange(4), 16), axis=1),\n",
+    "        ),\n",
+    "        axis=1,\n",
+    "    ),\n",
+    "    columns=['x', 'y', 'group'],\n",
     ")\n",
     "df3.group = df3.group.astype('category')"
    ]
@@ -430,7 +454,7 @@
     "    [jscatter.Scatter(x=x, y=y) for i in range(4)],\n",
     "    sync_selection=True,\n",
     "    sync_hover=True,\n",
-    "    rows=2\n",
+    "    rows=2,\n",
     ")"
    ]
   },
