--- a/notebooks/Untitled5.ipynb
+++ b/notebooks/Untitled5.ipynb
@@ -174,15 +174,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "29a87d94-a5c2-4eaf-bcfa-380a8646ddb9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from jscatter import glasbey_light\n",
+    "from jscatter import glasbey_dark\n",
     "\n",
     "category_cmap = {\n",
-    "    cat: glasbey_light[i]\n",
+    "    cat: glasbey_dark[i]\n",
     "    for i, cat in enumerate(sorted(huffpost_embeddings.category.unique()))\n",
     "}\n",
     "month_cmap = {\n",
@@ -219,19 +219,19 @@
     "    '2022': '#ff0000',\n",
     "}\n",
     "\n",
-    "huffpost_scatter_config = dict(x='x', y='y', axes=False, background_color='#111111')"
+    "huffpost_scatter_config = dict(x='x', y='y', axes=False, background_color='#ffffff')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "06abfdbe-d032-4222-b336-e4b5bf2a7ea9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "253190077cab41459df43cc26569eecc",
+       "model_id": "376d0f291ad4429fb640f5bec1d56dfa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,7 +239,7 @@
        "VBox(children=(HBox(children=(VBox(children=(Button(button_style='primary', icon='arrows', layout=Layout(width…"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
